@@ -1,3 +1,10 @@
+2014-12-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	Allow use of GMP for more targets
+	* src/lib/gmp_wrap.c: Support Clozure CL on ARM and i386
+	src/lisp/num_gmp.lisp: Generalize sbcl support
+	configure.ac: Adjust
+
 2014-12-18  Ralf Hemmecke  <ralf@hemmecke.org>
 
 	* src/algebra/intpar.spad: fix RootFSSplit argument
@@ -9,7 +16,7 @@
 
 2014-12-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
-	* src/algebra/polycat.spad: Fix 'totalDegreeSorted'.
+	* src/algebra/polycat.spad: Fix 'totalDegreeSorted'
 
 2014-12-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
